Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0 (15.0 branch)
-
None
-
-
e9b160c02 (master)
Description
Preconditions:
'Preferences -> Kits' page lists Qt and Python as autodetected kits.
Test steps:
1. Select Create Project... -> Application (Qt) -> Qt Widgets Application
2. In 'Define Build System' page select qmake as 'Build system'
3. Finish the project creation
4. Select 'Projects' from the side panel
5. Python is displayed as disabled(projects_1.png)
6. Select Python
Result:
Python can be selected and it's not grayed out anymore(projects_2.png).
Attachments
For Gerrit Dashboard: QTCREATORBUG-31408 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
584182,2 | ProjectExplorer: Do not call setup() or fix() for irrelevant kit aspects | master | qt-creator/qt-creator | Status: MERGED | +2 | -1 |