ProjectExplorer: Do not call setup() or fix() for irrelevant kit aspects

This check was already present for validate(), but missing for the other
two functions.

Fixes: QTCREATORBUG-31408
Change-Id: Icc70a9e2fe4b9576a7a25830fdd2300380174fa1
Reviewed-by: David Schulz <david.schulz@qt.io>